# Impulsor-3000

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust.yml
docs/: README.md  external_libraries.md
docs/installer/: README.md
installer/: README.md  script.nsi
installer/linux/: Impulsor-3000.desktop
installer/linux/appimage/: README.md  run.sh  setup.sh
installer/linux/appimage/Impulsor-3000-x86_64.AppDir/: Impulsor-3000.desktop
installer/linux/appimage/Impulsor_3000-x86_64.AppDir/: Impulsor-3000.desktop
installer/windows/: README.md  script.nsi
libs/lame/win-x64/: mp3lame.lib
src/: core.rs  impuls.rs  lib.rs  main.rs  ui.rs
src/core/: impuls_file.rs
src/core/impuls_file/: audio.rs
src/ui/: file_assets.rs  file_background.rs  file_banner.rs  file_icons.rs
