[package]
name = "Impulsor-3000"
version = "0.2.0"
edition = "2021"
build = "build.rs"
exclude = ["archive"]

[dependencies]
iced = { version = "0.12", features = ["svg"] }
image = "0.24.8"
pdfium-render =  { version="0.8.17" }
rfd = "0.14"
rust-embed = "8.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
