[package]
name = "impulsor3000"
version = "0.2.1"
edition = "2021"
build = "build.rs"
exclude = ["archive"]

[dependencies]
iced = { version = "0.13.1", features = ["svg"] }
pdfium-render =  { version="0.8", features = ["image"]}
image = "0"
rfd = "0.15"
rust-embed = "8.4.0"
symphonia = { version = "0.5", features = ["all"] }
lame = "0.1.3"
opener = { version = "0.7.2", features = ["reveal"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
